# CPP_FightingGame

./: .gitignore  README.md
FightingGameProject/: AABB.h  AnimationController.cpp  AnimationController.h  AnimationRenderer.h  AnimationStatus.h  Background.cpp  Background.h  BackgroundGroup.cpp  BackgroundGroup.h  Background_Idle_Mountains.h  Background_Idle_Sun.h  Background_Idle_Trees.h  BodyCollision.h  BodyPartCollision.h  BodyPartToBodyPartCollision.h  BodyToBodyCollisions.h  BodyType.h  BottomSegments.h  BounceProcessor.h  BoxCollider.cpp  BoxCollider.h  BoxRenderer.h  BufferChecker.h  CMakeLists.txt  Camera.cpp  Camera.h  CheckCollisionMessage.h  ColliderData.h  ColliderLoader.h  CollidingSideType.h  CollisionCheck.h  CollisionData.h  CollisionQueue.h  CollisionResult.h  CollisionStatus.h  CollisionStay.h  ComboChecker.h  ConcreteStateCreators.h  ConvertedInputType.h  CreateProjectile.h  (+152 more)
FightingGameProject/BoxColliderData/: Fighter_0_Jab.collider
FightingGameProject/BoxColliderData/Fighter_0/: Fighter_0_Jab.collider  fighter_0_hadouken_fire.collider  fighter_0_hadouken_recover.collider  fighter_0_hitreaction_0.collider  (+9 more)
FightingGameProject/FightingGameProject/: AnimationController.cpp  AnimationController.h  AnimationSpecs.h  AnimationStatus.h  Background.cpp  Background.h  Background_Idle_Mountains.h  Background_Idle_Sun.h  Background_Idle_Trees.h  CMakeLists.txt  Camera.cpp  Camera.h  CreationCount.h  DecalLoader.h  DecalPath.h  FightScene.cpp  FightScene.h  FighterDecalPath.h  FighterDecals.cpp  FighterDecals.h  FighterSpriteType.h  Fighter_0_Idle.h  Fighter_0_Jab.h  Fighter_0_Start.h  Fighter_0_WalkForward.h  Fighter_1_Idle.h  Fighter_1_Start.h  Fighters.cpp  Fighters.h  FightingGameProject.vcxproj  FightingGameProject.vcxproj.filters  Game.h  GameData.h  GameDecalPath.h  GameObj.cpp  GameObj.h  GameObjList.h  GameWindow.h  HitBoxEditorScene.h  Input.h  (+18 more)
